--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@
 body {
   background: white;
   font-family: 'Coming Soon', 'MoonFlowerBold', 'Moon Flower Bold', sans-serif;
-  max-width: 800px;
+  max-width: 600px;
   font-size: 16px;
   text-align: center;
   margin: auto;
@@ -65,8 +65,8 @@ hr {
   background-color:#fff;
   height: 0.1em;
   width:50%;
-  margin-top: 2em;
-  margin-bottom: 2em;
+  margin-top: 5em;
+  margin-bottom: 5em;
 }
 
 a {
@@ -100,7 +100,7 @@ form input, form textarea {
   border: solid 3px black;
   border-radius: 5px;
   padding: 0.5em 1em 0.5em 1em;
-  font-size: 20px;
+  font-size: 1em;
 }
 
 form button {
@@ -135,6 +135,12 @@ i {
   text-decoration: underline;
 }
 
+ul {
+  max-width: 350px;
+  text-align: left;
+  margin: auto;
+}
 
-
-
+.weatherwidget-io {
+  margin-bottom: 2em;
+}
